# renovate

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc  .renovaterc  CHANGELOG.md  Dockerfile  README.md  config.js  pyproject.toml
configs/: basic.json  client.json  cookiecutter-helm.json  cookiecutter-kustomize.json  cookiecutter-terraform-helm.json  cookiecutter-terraform-kustomize.json  cookiecutter-terraform.json  docker-images.json  helm-charts.json  infrastructure.json  test.json  tf-module.json
cookiecutter_docs/: __init__.py  cookiecutter_docs.py  version.py
cookiecutter_docs/models/: __init__.py  entry.py
tests/: incomplete.json  list.json  test_convert_to_md.py
