[tool.poetry]
name = "cookiecutter-docs"
version = "1.1.0"
description = "A CLI to generate documentation for cookiecutter from cookiecutter.json"
authors = ["Thibault Ayanides <thibault.ayanides@skale-5.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pydantic = "^1.10.8"
markdown = "^3.4.3"
pytablewriter = "^0.64.2"

[tool.poetry.scripts]
cookiecutter-docs = "cookiecutter_docs.cookiecutter_docs:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = false
atomic = false
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
known_first_party = "poetry"
